game.c, game.h, game_of_life.c and Makefile was modified

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,22 @@
 CC = cc
-CFLAFS = -Wall -Werror -Wextra
-SOURCES= game_of_life.c game.c game.h
+CFLAFS = -Wall -Werror -Wextra -std=c11
+SOURCES = game_of_life.c game.c game.h
 EXECUTABLE= ../build/game_of_life
 
-all: style game_of_life
+all: style $(EXECUTABLE)
+
+$(EXECUTABLE): game_of_life.o game.o
+	$(CC) game_of_life.o game.o -o $(EXECUTABLE)
+
+game_of_life.o: game_of_life.c game.h
+	$(CC) $(CFLAGS) -c game_of_life.c
+
+game.o: game.h game.c
+	$(CC) $(CFLAGS) -c game.c
 
 style:
 	cp -R ../materials/linters/.clang-format ../src/.clang-format
 	#clang-format -n *.c *.h
 
-game_of_life:
-	$(CC) $(CFLAGS) $(SOURCES) -o $(EXECUTABLE)
-
 clean:
-	rm -f $(EXECUTABLE)
+	rm -f *.o $(EXECUTABLE)
